<resources>
    <string name="app_name">Weather</string>

    <string name="btnWeatherText">Get Weather</string>
    <string name="sunrisetext">Sunrise at:</string>
    <string name="sunsettext">Sunset at:</string>
    <string name="tempmintext">Temp Min:</string>
    <string name="tempmaxtext">Temp Max:</string>
    <string name="humiditytext">Humidity:</string>
    <string name="inputhint">Enter city</string>
</resources>
