<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputhint"/>

    <Button
        android:id="@+id/btnGetData"
        android:text="@string/btnWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCurrentCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center">

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                />

        </TableRow>

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">



            <TextView
                android:id="@+id/titleSunrise"
                android:text="@string/sunrisetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/titleSunset"
                android:text="@string/sunsettext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <!--<TableRow android:layout_gravity="center_horizontal"-->
            <!--android:gravity="center_horizontal">-->
            <!--<TextView-->
                <!--android:id="@+id/titleTemp"-->
                <!--android:text="Current Temp: "-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--/>-->

            <!--<TextView-->
                <!--android:id="@+id/tvCurrentTemp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--/>-->

        <!--</TableRow>-->

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/titleMin"
                android:text="@string/tempmintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvTempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/titleMax"
                android:text="@string/tempmaxtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvTempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/titleHumidity"
                android:text="@string/humiditytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </TableRow>
    </TableLayout>




</LinearLayout>
